# ai-change-vault

./: .gitignore  LICENSE  README.md  build_backend.py  pyproject.toml
.github/workflows/: publish.yml
aicv/: __init__.py  __main__.py  backup.py  cli.py  config.py  console.py  embeddings.py  entrypoint.py  index.py  models.py  revert.py  search.py  session_log.py  utils.py
docs/: AI_INTEGRATION.md  ARCHITECTURE.md  README.md  USAGE.md
scripts/: AGENTS.md  AI_INSTRUCTIONS.md  CLAUDE.md  KIMI.md  ai-backup.sh  ai-index-turn.py  ai-query-turns.py  ai-revert.sh  install.sh
tests/: test_backup.py  test_cli.py  test_compact_backup.py  test_config.py  test_embeddings.py  test_entrypoint.py  test_index.py  test_revert.py  test_search.py
